Added trailing slash to links

--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -6,19 +6,19 @@
 				<a class="site-nav__link site-nav__link--1 {% if page.url == '/' %}site-nav__link--active{% endif %}" href="/">Home</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--2 {% if page.url == '/about/' %}site-nav__link--active{% endif %}" href="/about">About</a>
+				<a class="site-nav__link site-nav__link--2 {% if page.url == '/about/' %}site-nav__link--active{% endif %}" href="/about/">About</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--3 {% if page.url == '/projects/' %}site-nav__link--active{% endif %}" href="/projects">Projects</a>
+				<a class="site-nav__link site-nav__link--3 {% if page.url == '/projects/' %}site-nav__link--active{% endif %}" href="/projects/">Projects</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--4 {% if page.url == '/process/' %}site-nav__link--active{% endif %}" href="/process">My Process</a>
+				<a class="site-nav__link site-nav__link--4 {% if page.url == '/process/' %}site-nav__link--active{% endif %}" href="/process/">My Process</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--5 {% if page.url == '/uses/' %}site-nav__link--active{% endif %}" href="/uses">Uses</a>
+				<a class="site-nav__link site-nav__link--5 {% if page.url == '/uses/' %}site-nav__link--active{% endif %}" href="/uses/">Uses</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--6 {% if page.url == '/hire/' %}site-nav__link--active{% endif %}" href="/hire">Hire Me</a>
+				<a class="site-nav__link site-nav__link--6 {% if page.url == '/hire/' %}site-nav__link--active{% endif %}" href="/hire/">Hire Me</a>
 			</li>
 		</ul>
 	</nav>
