--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -66,8 +66,8 @@ body {
 
 main {
 	position: relative;
-	padding-top: 100px;
-	padding-bottom: 100px;
+	padding-top: 6.25em;
+	padding-bottom: 6.25em;
 }
 
 main:after {
@@ -88,8 +88,8 @@ main:after {
 .container {
 	max-width: 1050px;
 	margin: 0 auto;
-	padding-left: 75px;
-	padding-right: 75px;
+	padding-left: 4.75em;
+	padding-right: 4.75em;
 }
 
 img {
@@ -128,7 +128,8 @@ h1:before, .h1:before {
 }
 
 h2, .h2 {
-	margin: 75px 0 40px;
+	margin-top: 4.75rem;
+	margin-bottom: 2.5rem;
 	font-family: var(--display);
 	font-size: 2.5rem;
 	font-weight: 600;
@@ -137,7 +138,8 @@ h2, .h2 {
 }
 
 h3, .h3 {
-	margin: 40px 0 15px;
+	margin-top: 2.5rem;
+	margin-bottom: 1.25rem;
 	font-family: var(--display);
 	font-size: 1.875rem;
 	font-weight: 600;
@@ -156,15 +158,15 @@ ol {
 }
 
 li {
-	margin-bottom: 20px;
+	margin-bottom: 1.25rem;
 	font-size: 1.5rem;
-	line-height: 1.6;
+	line-height: 1.75;
 }
 
 p {
-	margin-bottom: 30px;
+	margin-bottom: 2rem;
 	font-size: 1.5rem;
-	line-height: 1.6;
+	line-height: 1.75;
 }
 
 a {
@@ -415,7 +417,7 @@ ins {
    ------------------------------------------------------------ */
 
 .page-header {
-	margin-bottom: 75px;
+	margin-bottom: 4.75em;
 }
 
 .page-header__tagline {
@@ -674,11 +676,6 @@ ins {
 /* FAQ
    ------------------------------------------------------------ */
 
-.faq {
-	font-size: 1.5rem;
-	line-height: 1.6;
-}
-
 .faq__question {
 	display: inline-block;
 	cursor: pointer;
@@ -687,6 +684,7 @@ ins {
 	font-family: var(--serif);
 	font-weight: 400;
 	font-size: 1.625rem;
+	line-height: 1.6;
 	color: var(--red);
 	transition: color .25s;
 	outline: none;
@@ -937,22 +935,7 @@ ins {
 
 @media (max-width: 1000px) {
 	h1, .h1 {
-		font-size: 5rem;
 		letter-spacing: -1.25px;
-	}
-
-	h2, .h2 {
-		margin: 60px 0 35px;
-		font-size: 2.25rem;
-	}
-
-	h3, .h3 {
-		margin: 35px 0 10px;
-		font-size: 1.75rem;
-	}
-
-	.page-header {
-		margin-bottom: 60px;
 	}
 
 	.page-header__intro {
@@ -1119,47 +1102,15 @@ ins {
 		height: 200px;
 	}
 
-	main {
-		padding-top: 75px;
-		padding-bottom: 75px;
-	}
-
 	main:after {
 		top: 75px;
 		font-size: 12.5rem;
 		letter-spacing: -6px;
 	}
 
-	.container {
-		padding-left: 50px;
-		padding-right: 50px;
-	}
-
-	p {
-		margin-bottom: 25px;
-		font-size: 1.3125rem;
-	}
-
-	li {
-		margin-bottom: 15px;
-		font-size: 1.375rem;
-	}
-
 	.yuge {
 		font-size: 2.5rem;
 		letter-spacing: -1px;
-	}
-
-	.page-header {
-		margin-bottom: 50px;
-	}
-
-	.page-header__tagline {
-		font-size: 1.75rem;
-	}
-
-	.page-header__intro {
-		font-size: 1.625rem;
 	}
 
 	.homepage-intro {
@@ -1245,63 +1196,22 @@ ins {
 }
 
 @media (max-width: 600px) {
-	main {
-		padding-top: 50px;
-		padding-bottom: 50px;
-	}
-
 	main:after {
 		content: none;
 	}
 
-	.container {
-		padding-left: 30px;
-		padding-right: 30px;
-	}
-
 	h1, .h1 {
-		font-size: 3.75rem;
 		letter-spacing: -1px;
-	}
-
-	h2, .h2 {
-		margin: 50px 0 25px;
-		font-size: 2rem;
-	}
-
-	h3, .h3 {
-		margin-top: 30px;
-		font-size: 1.5rem;
-	}
-
-	.page-header {
-		margin-bottom: 40px;
-	}
-
-	.page-header__tagline {
-		font-size: 1.5rem;
 	}
 
 	.page-header__intro {
 		width: 100%;
-		margin-top: 20px;
-		font-size: 1.375rem;
 	}
 
 	.homepage-intro {
 		margin-bottom: 40px;
 		font-size: 1.875rem;
 		letter-spacing: -1px;
-	}
-
-	p {
-		margin-bottom: 20px;
-		font-size: 1.125rem;
-	}
-
-	li {
-		margin-bottom: 12px;
-		font-size: 1.125rem;
 	}
 
 	.yuge {
@@ -1371,48 +1281,18 @@ ins {
 		grid-template-columns: repeat(2, 1fr);
 	}
 
-	.container {
-		padding-left: 25px;
-		padding-right: 25px;
-	}
-
 	h1, .h1 {
-		font-size: 2.75rem;
-	}
-
-	h2, .h2 {
-		margin: 40px 0 20px;
-		font-size: 1.75rem;
-	}
-
-	h3, .h3 {
-		margin-bottom: 5px;
-		font-size: 1.375rem;
-	}
-
-	.page-header__intro {
-		margin-top: 15px;
-		font-size: 1.125rem;
-	}
-
-	.page-header__tagline {
-		font-size: 1.3125rem;
+		padding-bottom: 10px;
 	}
 
 	.homepage-intro {
 		margin-bottom: 30px;
-		font-size: 1.625rem;
-		letter-spacing: -.5px;
+		font-size: 1.5rem;
+		letter-spacing: -.4px;
 	}
 
-	p {
-		font-size: 1rem;
-		line-height: 1.5;
-	}
-
-	li {
-		margin-bottom: 10px;
-		font-size: 1rem;
+	p, li {
+		line-height: 1.6;
 	}
 
 	ol, ul {
@@ -1487,5 +1367,111 @@ ins {
 @media (max-width: 420px) {
 	.site-nav__link {
 		font-size: 1.125rem;
+	}
+}
+
+@media (min-width: 1001px) {
+	.service__description,
+	.quote__text {
+		line-height: 1.6;
+	}
+}
+
+
+
+/* Responsive Typography */
+
+@media (min-width: 420px) and (max-width: 1000px) {
+	main {
+		padding-top: calc(2.5rem + (6.25 - 2.5) * ((100vw - 26.25rem) / (62.5 - 26.25)));
+		padding-bottom: calc(2.5rem + (6.25 - 2.5) * ((100vw - 26.25rem) / (62.5 - 26.25)));
+	}
+
+	.container {
+		padding-left: calc(1.5rem + (4.75 - 1.5) * ((100vw - 26.25rem) / (62.5 - 26.25)));
+		padding-right: calc(1.5rem + (4.75 - 1.5) * ((100vw - 26.25rem) / (62.5 - 26.25)));
+	}
+
+	h1, .h1 {
+		font-size: calc(2.75rem + (6.25 - 2.75) * ((100vw - 26.25rem) / (62.5 - 26.25)));
+	}
+
+	h2, .h2 {
+		margin-top: calc(2.5rem + (4.75 - 2.5) * ((100vw - 26.25rem) / (62.5 - 26.25)));
+		margin-bottom: calc(1.25rem + (2.5 - 1.25) * ((100vw - 26.25rem) / (62.5 - 26.25)));
+		font-size: calc(1.75rem + (2.5 - 1.75) * ((100vw - 26.25rem) / (62.5 - 26.25)));
+	}
+
+	h3, .h3 {
+		margin-top: calc(2rem + (2.5 - 2) * ((100vw - 26.25rem) / (62.5 - 26.25)));
+		margin-bottom: calc(1rem + (1.25 - 1) * ((100vw - 26.25rem) / (62.5 - 26.25)));
+		font-size: calc(1.375rem + (1.875 - 1.375) * ((100vw - 26.25rem) / (62.5 - 26.25)));
+	}
+
+	.page-header {
+		margin-bottom: calc(2.5rem + (4.75 - 2.5) * ((100vw - 26.25rem) / (62.5 - 26.25)));
+	}
+
+	.page-header__tagline {
+		font-size: calc(1.375rem + (2 - 1.375) * ((100vw - 26.25rem) / (62.5 - 26.25)));
+	}
+
+	.page-header__intro {
+		margin-top: calc(1rem + (1.5 - 1) * ((100vw - 26.25rem) / (62.5 - 26.25)));
+		font-size: calc(1.125rem + (1.75 - 1.125) * ((100vw - 26.25rem) / (62.5 - 26.25)));
+	}
+
+	p {
+		margin-bottom: calc(1.25rem + (2 - 1.25) * ((100vw - 26.25rem) / (62.5 - 26.25)));
+		font-size: calc(1rem + (1.5 - 1) * ((100vw - 26.25rem) / (62.5 - 26.25)));
+	}
+
+	li {
+		margin-bottom: calc(0.625rem + (1.25 - 0.625) * ((100vw - 26.25rem) / (62.5 - 26.25)));
+		font-size: calc(1rem + (1.5 - 1) * ((100vw - 26.25rem) / (62.5 - 26.25)));
+	}
+}
+
+@media (max-width: 420px) {
+	main {
+		padding-top: 2.5rem;
+		padding-bottom: 2.5rem;
+	}
+
+	.container {
+		padding-left: 1.5rem;
+		padding-right: 1.5rem;
+	}
+
+	h1, .h1 { font-size: 2.75rem; }
+
+	h2, .h2 {
+		margin-top: 2.5rem;
+		margin-bottom: 1.25rem;
+		font-size: 1.75rem;
+	}
+
+	h3, .h3 {
+		margin-top: 2rem;
+		margin-bottom: 1rem;
+		font-size: 1.375rem;
+	}
+
+	.page-header { margin-bottom: 2.5rem; }
+	.page-header__tagline { font-size: 1.375rem; }
+
+	.page-header__intro {
+		margin-top: 1rem;
+		font-size: 1.125rem;
+	}
+
+	p {
+		margin-bottom: 1.25rem;
+		font-size: 1rem;
+	}
+
+	li {
+		margin-bottom: 0.625rem;
+		font-size: 1rem;
 	}
 }
