Swapped Bookmarks and Uses links

--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -15,7 +15,7 @@
 				<a class="site-nav__link site-nav__link--4 {% if page.url == '/process/' %}site-nav__link--active{% endif %}" href="/process/">My Process</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--5 {% if page.url == '/uses/' %}site-nav__link--active{% endif %}" href="/uses/">Uses</a>
+				<a class="site-nav__link site-nav__link--5 {% if page.url == '/bookmarks/' %}site-nav__link--active{% endif %}" href="/bookmarks/">Bookmarks</a>
 			</li>
 			<li class="site-nav__item">
 				<a class="site-nav__link site-nav__link--6 {% if page.url == '/hire/' %}site-nav__link--active{% endif %}" href="/hire/">Hire Me</a>
