--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -67,7 +67,7 @@ body {
 main {
 	position: relative;
 	padding-top: 6.25rem;
-	padding-bottom: 6.25rem;
+	padding-bottom: 8rem;
 }
 
 main:after {
@@ -448,7 +448,10 @@ ins {
    ------------------------------------------------------------ */
 
 .main-footer {
-	padding-top: 25px;
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	padding-bottom: 25px;
 	color: var(--text-dark);
 	text-align: center;
@@ -476,6 +479,22 @@ ins {
 .footer-nav__link:hover,
 .footer-nav__link:focus {
 	color: var(--yellow);
+}
+
+.back-to-top {
+	display: inline-block;
+	position: relative;
+	top: -30px;
+	padding: 7px 40px;
+	font-family: var(--display);
+	color: var(--text-dark);
+	letter-spacing: .5px;
+	line-height: 1;
+	text-align: center;
+	text-transform: uppercase;
+	border-bottom: 0;
+	background-color: var(--bg-dark);
+	clip-path: polygon(30px 0, calc(100% - 30px) 0, 100% 100% , 0% 100%);
 }
 
 .copyright {
@@ -1355,7 +1374,7 @@ ins {
 @media (min-width: 420px) and (max-width: 1000px) {
 	main {
 		padding-top: calc(2.5rem + (6.25 - 2.5) * ((100vw - 26.25rem) / (62.5 - 26.25)));
-		padding-bottom: calc(2.5rem + (6.25 - 2.5) * ((100vw - 26.25rem) / (62.5 - 26.25)));
+		padding-bottom: calc(2.5rem + (8 - 2.5) * ((100vw - 26.25rem) / (62.5 - 26.25)));
 	}
 
 	.container {
