Portfolio Refreshed for 2024

--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -1,6 +1,6 @@
 <header class="main-header">
 	<nav class="site-nav">
-		<img class="logo" src="/assets/images/roland.png" alt="Caricature of Roland Szabó" title="Hey, it's me! 😄">
+		<img class="logo" src="/assets/images/roland-vector.webp" alt="Caricature of Roland Szabó" title="Hey, it's me! 😄">
 		<ul class="site-nav__list">
 			<li class="site-nav__item">
 				<a class="site-nav__link site-nav__link--1 {% if page.url == '/' %}site-nav__link--active{% endif %}" href="/">Home</a>
