--- a/src/includes/base.html
+++ b/src/includes/base.html
@@ -8,6 +8,7 @@
 		<title>{{ title }} | Roland Szabó Frontend Designer</title>
 		{%- endif %}
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="I'm Roland, a coder & designer hybrid with 10+ years of experience. Currently looking for full-time remote work.">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 		<!-- Stylesheets -->
@@ -33,17 +34,17 @@
 		<meta property="og:url" content="https://rolandszabo.design{{ page.url }}">
 
 		{%- if page.url == "/" %}
-		<meta property="og:title" content="Roland Szabó Frontend Designer">
-		<meta property="og:description" content="Hi! I'm Roland, a multi-disciplinary web professional with 10 years of experience. Currently looking for freelance opportunities.">
+		<meta property="og:title" content="Roland Szabó | Senior Web Designer">
+		<meta property="og:description" content="I'm Roland, a coder & designer hybrid with 10+ years of experience. Currently looking for full-time remote work.">
 		{%- else %}
-		<meta property="og:title" content="{{ title }} | Roland Szabó, Frontend Designer">
+		<meta property="og:title" content="{{ title }} | Roland Szabó, Senior Web Designer">
 		<meta property="og:description" content="{{ intro }}">
 		{%- endif %}
 
 		{%- if tagline == "Project" %}
 		<meta property="og:image" content="https://rolandszabo.design{{ logo_url }}">
 		{%- else %}
-		<meta property="og:image" content="https://rolandszabo.design/assets/images/roland.png">
+		<meta property="og:image" content="https://rolandszabo.design/assets/images/roland-photo.webp">
 		{%- endif %}
 
 		<!--[if IE]> <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script> <![endif]-->
