--- a/src/includes/base.html
+++ b/src/includes/base.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		{%- if page.url == "/" %}
-		<title>Roland Szabó Frontend Designer</title>
+		<title>Roland Szabó | Senior Web Designer</title>
 		{%- else %}
-		<title>{{ title }} | Roland Szabó Frontend Designer</title>
+		<title>{{ title }} | Roland Szabó | Senior Web Designer</title>
 		{%- endif %}
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="I'm Roland, a coder & designer hybrid with 10+ years of experience. Currently looking for full-time remote work.">
