--- a/public/assets/css/services.css
+++ b/public/assets/css/services.css
@@ -23,7 +23,7 @@
 @media only screen and (min-width: 768px) {
 	.service {
 		padding: 3rem;
-		border-left: 1rem solid var(--bg-light);
+		border-left: .75rem solid var(--bg-light);
 	}
 }
 
@@ -58,5 +58,6 @@
 }
 
 .service__title {
+	margin-top: 0;
 	margin-bottom: 0;
 }
