--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -156,32 +156,34 @@ h1, .h1 {
 }
 
 h2, .h2 {
+	margin-bottom: 2rem;
 	letter-spacing: -.75px;
 	line-height: 1.4;
 }
 
 @media only screen and (max-width: 575px) {
 	h2, .h2 {
-		margin-bottom: 2rem;
+		margin-top: 2rem;
 		font-size: 2rem;
 	}
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
 	h2, .h2 {
-		margin-bottom: 3rem;
+		margin-top: 3rem;
 		font-size: 3rem;
 	}
 }
 
 @media only screen and (min-width: 768px) {
 	h2, .h2 {
-		margin-bottom: 4rem;
+		margin-top: 4rem;
 		font-size: 4rem;
 	}
 }
 
 h3, .h3 {
+	margin-bottom: 1.5rem;
 	font-weight: 700;
 	letter-spacing: -.5px;
 	line-height: 1.4;
@@ -189,21 +191,21 @@ h3, .h3 {
 
 @media only screen and (max-width: 575px) {
 	h3, .h3 {
-		margin-bottom: 1.5rem;
+		margin-top: 1.5rem;
 		font-size: 2rem;
 	}
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
 	h3, .h3 {
-		margin-bottom: 2rem;
+		margin-top: 2rem;
 		font-size: 2.5rem;
 	}
 }
 
 @media only screen and (min-width: 768px) {
 	h3, .h3 {
-		margin-bottom: 2rem;
+		margin-top: 2.5rem;
 		font-size: 3rem;
 	}
 }
@@ -214,7 +216,9 @@ h4, .h4 {
 	line-height: 1.4;
 }
 
-p {
+p,
+ul,
+ol {
 	margin-bottom: 2rem;
 }
 
@@ -253,8 +257,18 @@ small {
 	margin-bottom: 5rem;
 }
 
-.page-header__title {
+.subheading {
+	margin-bottom: 3rem;
+}
+
+.page-header__title,
+.subheading__title {
 	margin-bottom: 1rem;
+}
+
+.page-header__text,
+.subheading__text {
+	margin-bottom: 0;
 }
 
 
@@ -433,6 +447,7 @@ small {
 .nav__list {
 	display: flex;
 	flex-wrap: wrap;
+	margin-bottom: 0;
 }
 
 .nav__link {
@@ -459,6 +474,7 @@ small {
 
 .footer {
 	padding: 2rem;
+	border-bottom: .75rem solid var(--bg-dark);
 }
 
 
