--- a/src/includes/partials/header.html
+++ b/src/includes/partials/header.html
@@ -7,9 +7,6 @@
 		<nav class="nav">
 			<ul class="nav__list">
 				<li class="nav__item">
-					<a class="nav__link" href="/">Home</a>
-				</li>
-				<li class="nav__item">
 					<a class="nav__link" href="/about/">About</a>
 				</li>
 				<li class="nav__item">
@@ -17,6 +14,9 @@
 				</li>
 				<li class="nav__item">
 					<a class="nav__link" href="/portfolio/">Portfolio</a>
+				</li>
+				<li class="nav__item"></li>
+					<a class="nav__link" href="/hire-me/">Hire Me</a>
 				</li>
 			</ul>
 		</nav>
