--- a/src/includes/layouts/base.html
+++ b/src/includes/layouts/base.html
@@ -26,10 +26,10 @@
 
 		<!-- OpenGraph -->
 		<meta property="og:type" content="website">
-		<meta property="og:url" content="">
-		<meta property="og:image" content="">
-		<meta property="og:title" content="">
-		<meta property="og:description" content="">
+		<meta property="og:url" content="https://rolandszabo.design/">
+		<meta property="og:image" content="{{ site.url }}/assets/images/og-image.webp">
+		<meta property="og:title" content="Your Website - Simplified & Supercharged. | Roland Szabó Design">
+		<meta property="og:description" content="Everyone deserves a website that's fast, simple, and effortless to manage.">
 
 		<!-- Google Fonts -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
