--- a/src/includes/partials/header.html
+++ b/src/includes/partials/header.html
@@ -15,7 +15,7 @@
 				<li class="nav__item">
 					<a class="nav__link" href="/portfolio/">Portfolio</a>
 				</li>
-				<li class="nav__item"></li>
+				<li class="nav__item">
 					<a class="nav__link" href="/hire-me/">Hire Me</a>
 				</li>
 			</ul>
