--- a/src/assets/css/hire-me.css
+++ b/src/assets/css/hire-me.css
@@ -87,6 +87,71 @@
 
 
 
+/* Testimonial, Quote */
+
+.testimonials {
+	display: grid;
+	grid-gap: 2rem;
+}
+
+@media only screen and (min-width: 768px) {
+	.testimonials {
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+
+.testimonial {
+	border-left: 1rem solid var(--bg-light);
+	background-color: var(--bg-dark);
+}
+
+@media only screen and (max-width: 767px) {
+	.testimonial {
+		padding: 2rem;
+	}
+}
+
+@media only screen and (min-width: 768px) {
+	.testimonial {
+		padding: 3rem;
+	}
+}
+
+.testimonial__header {
+	display: grid;
+	grid-template-columns: 10rem 1fr;
+	grid-gap: 2rem;
+	align-items: center;
+	margin-bottom: 2rem;
+}
+
+.testimonial__image {
+	clip-path: var(--rhombus);
+	width: 10rem;
+	height: 10rem;
+	background-color: var(--bg-light);
+}
+
+.testimonial__author {
+	color: var(--text-dark);
+	grid-column: 2;
+}
+
+.testimonial__name {
+	display: block;
+	font-weight: 700;
+	color: var(--text);
+}
+
+.testimonial__text {
+	margin-bottom: 0;
+}
+
+.testimonial__text:before { content: "“"; }
+.testimonial__text:after  { content: "”"; }
+
+
+
 /* FAQ, Accordion */
 
 .faq {
