--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -161,8 +161,8 @@ img {
 
 /* Typography */
 
-h1, h2, h3, h4,
-.h1, .h2, .h3, .h4 {
+h1, h2, h3,
+.h1, .h2, .h3 {
 	color: var(--text-light);
 }
 
@@ -245,12 +245,6 @@ h3, .h3 {
 		margin-top: 2.5rem;
 		font-size: 3rem;
 	}
-}
-
-h4, .h4 {
-	font-size: 2.5rem;
-	letter-spacing: -.375px;
-	line-height: 1.4;
 }
 
 p,
@@ -358,71 +352,6 @@ small {
 	color: var(--bg);
 	background: var(--gradient);
 }
-
-
-
-/* Testimonial, Quote */
-
-.testimonials {
-	display: grid;
-	grid-gap: 2rem;
-}
-
-@media only screen and (min-width: 768px) {
-	.testimonials {
-		grid-template-columns: repeat(2, 1fr);
-	}
-}
-
-.testimonial {
-	border-left: 1rem solid var(--bg-light);
-	background-color: var(--bg-dark);
-}
-
-@media only screen and (max-width: 767px) {
-	.testimonial {
-		padding: 2rem;
-	}
-}
-
-@media only screen and (min-width: 768px) {
-	.testimonial {
-		padding: 3rem;
-	}
-}
-
-.testimonial__header {
-	display: grid;
-	grid-template-columns: 10rem 1fr;
-	grid-gap: 2rem;
-	align-items: center;
-	margin-bottom: 2rem;
-}
-
-.testimonial__image {
-	clip-path: var(--rhombus);
-	width: 10rem;
-	height: 10rem;
-	background-color: var(--bg-light);
-}
-
-.testimonial__author {
-	color: var(--text-dark);
-	grid-column: 2;
-}
-
-.testimonial__name {
-	display: block;
-	font-weight: 700;
-	color: var(--text);
-}
-
-.testimonial__text {
-	margin-bottom: 0;
-}
-
-.testimonial__text:before { content: "“"; }
-.testimonial__text:after  { content: "”"; }
 
 
 
