--- a/src/includes/layouts/base.html
+++ b/src/includes/layouts/base.html
@@ -25,11 +25,13 @@
 		<meta name="theme-color" content="#ffffff">
 
 		<!-- OpenGraph -->
-		<meta property="og:type" content="website">
+		<meta name="twitter:card" content="summary">
+		<meta name="twitter:site" content="@rszabodesign">
+		<meta name="twitter:creator" content="@rszabodesign">
 		<meta property="og:url" content="https://rolandszabo.design/">
-		<meta property="og:image" content="/assets/images/og-image.webp">
 		<meta property="og:title" content="Your Website - Simplified & Supercharged. | Roland Szabó Design">
 		<meta property="og:description" content="Everyone deserves a website that's fast, simple, and effortless to manage.">
+		<meta property="og:image" content="/assets/images/og-image.webp">
 
 		<!-- FontAwesome -->
 		<link rel="stylesheet" href="/assets/css/fontawesome.min.css">
