--- a/src/includes/layouts/base.html
+++ b/src/includes/layouts/base.html
@@ -34,9 +34,9 @@
 		<meta property="og:image" content="/assets/images/og-image.webp">
 
 		<!-- FontAwesome -->
-		<link rel="stylesheet" href="/assets/css/fontawesome.min.css">
-		<link rel="stylesheet" href="/assets/css/fontawesome-solid.min.css">
-		<link rel="stylesheet" href="/assets/css/fontawesome-brands.min.css">
+		<link rel="stylesheet" href="/assets/css/fontawesome.min.css" media="print" onload="this.media='all'">
+		<link rel="stylesheet" href="/assets/css/fontawesome-solid.min.css" media="print" onload="this.media='all'">
+		<link rel="stylesheet" href="/assets/css/fontawesome-brands.min.css" media="print" onload="this.media='all'">
 
 		<!-- Google Analytics -->
 		<script defer src="https://www.googletagmanager.com/gtag/js?id=G-7EM7TYLQD9"></script>
